Tue May 27 20:26:06 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (test_flush_in_finalizer1): some opened fds are
	  remain before GC, so unlink the tempfile is failed.

Tue May 27 19:07:26 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_autoclose_p): Don't raise on frozen IO.

	* test/lib/minitest/unit.rb: IO#autoclose? may raise IOError.

Tue May 27 19:01:49 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/openssl/test_pair.rb: Modify TestSSL#test_read_and_write
	  to handle partial sysreads. [Bug #7398][ruby-core:49563]
	* test/openssl/test_ssl.rb: ditto.

Tue May 27 18:46:23 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/openssl/test_pkcs7.rb: Add tests for PKCS7#type= and add_data.
	  [Feature #7399][ruby-core:49565]

Tue May 27 17:45:09 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/openssl/test_hmac.rb (test_binary_update): Added Test for
	  HMAC signing with UTF-8 String. [Bug #7512][ruby-core:50559]

Tue May 27 17:10:14 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/runner.rb: fixed randomly test failure.
	  [Bug #6573][ruby-core:45563]

Tue May 27 16:58:12 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_timeout.rb (test_timeout): inverted test condition.
	  [Bug #8523]

Tue May 27 12:24:22 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Show leaked file descriptors.

Tue May 27 11:12:56 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_fileno, rb_io_inspect): non-modification does not
	  error on frozen IO.  [ruby-dev:48241] [Bug #9865]

Tue May 27 00:00:21 2014  yui-knk  <spiketeika@gmail.com>

	* insns.def (defineclass): fix typo in the instruction comment.
	  [fix GH-618]

Mon May 26 16:33:15 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_file.rb: skip the test of atime on Windows, because
	  Windows delays updating atime about 1 hour.
	  see more details: